Правки классов